# ortho

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: tests.yaml
docs/source/: conf.py  index.rst
ortho/: .git.py.swp  .yaml.py.swp  __init__.py  __main__.py  _version.py  bash.py  cli.py  cli_example.txt  diagnose.py  dispatch.py  dotdict.py  functional.py  git.py  interface.py  locker.py  logs.py  metadata.py  reexec.py  stage.py  terminal_view.py  test_dispatch.py  test_trestle.py  test_yaml.py  test_yaml_builder.py  text_viewer.py  utils.py  yaml.py  yaml_builder.py  yaml_compositor.py  yaml_include.py  yaml_trestle.py
