[metadata]
name = ortho
description = A catchall grab-bag of miscellaneous Python extrana.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Ryan Patrick Bradley
author_email = bradleyrp@gmail.com
license = MIT
license_file = LICENSE.txt
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Console
	License :: OSI Approved :: MIT License
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.8
setup_requires =
	setuptools_scm

[options.extras_require]
cli = click
docs = sphinx; numpydoc

[bdist_wheel]
universal = 1

[coverage:run]
source = ortho
